[gd_scene load_steps=3 format=3 uid="uid://bvxqy8n4h1qkr"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]
[ext_resource type="Theme" path="res://assets/ui_theme.tres" id="2"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
theme = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.3, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hill Climb Racing"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="VehicleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Select Vehicle"

[node name="UpgradesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrades"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="CoinsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
text = "Coins: 0"